--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -10,7 +10,7 @@
   "author": "HcySunYang <HcySunYang@outlook.com>",
   "homepage": "https://github.com/vuese/vuese/tree/master/packages/parser#readme",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "lib/index.ts",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
