--- a/packages/markdown-render/package.json
+++ b/packages/markdown-render/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@didi/vuese-markdown-render",
-  "version": "2.10.1",
+  "version": "1.0.0-beta-.2",
   "description": "Render raw markdown string according to AST",
   "keywords": [
     "markdown",
@@ -10,6 +10,7 @@
   "author": "HcySunYang <HcySunYang@outlook.com>",
   "homepage": "https://github.com/vuese/vuese/tree/master/packages/markdown-render#readme",
   "license": "MIT",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
