--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@didi/vuese-parser",
-  "version": "2.9.1",
+  "version": "1.0.0-beta-.2",
   "description": "Vue file parser for automatic document generation",
   "keywords": [
     "parser",
@@ -10,6 +10,7 @@
   "author": "HcySunYang <HcySunYang@outlook.com>",
   "homepage": "https://github.com/vuese/vuese/tree/master/packages/parser#readme",
   "license": "MIT",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
