chore: add release script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
     "vuese-cli": "./packages/cli/bin/index.js",
-    "lerna-tsc": "lerna run tsc"
+    "lerna-tsc": "lerna run tsc",
+    "release": "lerna publish"
   },
   "dependencies": {
     "@babel/generator": "^7.10.3",
