--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuese/cli",
-  "version": "2.13.1",
+  "version": "1.0.0-beta-.3",
   "description": "Automatically generate markdown documents based on your vue file",
   "keywords": [
     "markdown",
