--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^6.8.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
+    "git-cz": "^4.7.6",
     "husky": "^1.0.0",
     "is-builtin-module": "^3.0.0",
     "jest": "^24.5.0",
