--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/parser": "^7.10.3",
     "@babel/traverse": "^7.10.3",
     "@babel/types": "^7.3.0",
+    "typedoc": "^0.25.2",
+    "typedoc-plugin-missing-exports": "^2.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
@@ -31,14 +33,14 @@
     "@types/fs-extra": "^8.1.0",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "all-contributors-cli": "^5.6.0",
     "chalk": "^2.4.2",
     "conventional-changelog-cli": "^2.0.11",
     "cz-emoji": "^1.1.2",
     "dts-bundle": "^0.7.3",
-    "eslint": "^6.8.0",
+    "eslint": "^8.51.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
     "git-cz": "^4.7.6",
@@ -53,7 +55,7 @@
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-typescript2": "^0.19.0",
     "ts-jest": "^23.10.1",
-    "typescript": "^3.8.3"
+    "typescript": "^5.2.2"
   },
   "lint-staged": {
     "*.ts": [
