--- a/packages/parser/tsconfig.json
+++ b/packages/parser/tsconfig.json
@@ -8,7 +8,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "target": "es2017",
     "esModuleInterop": true,
     "incremental": false
