--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@didi/vuese-parser",
-  "version": "1.1.6",
+  "version": "1.1.7-test.1",
   "description": "Vue file parser for automatic document generation",
   "keywords": [
     "parser",
@@ -17,6 +17,18 @@
   ],
   "scripts": {
     "tsc": "rm -rf dist && tsc"
+  },
+  "dependencies": {
+    "@babel/generator": "7.10.3",
+    "@babel/parser": "7.10.3",
+    "@babel/traverse": "7.10.3",
+    "@babel/types": "7.3.4",
+    "typedoc": "^0.25.2",
+    "typedoc-plugin-missing-exports": "^2.1.0",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   },
   "publishConfig": {
     "access": "public"
