chore: 🤖 配置、文件内容

--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,7 @@
   ],
   "command": {
     "publish": {
-      "allowBranch": ["master", "monorepo"],
+      "allowBranch": ["master", "monorepo", "pub"],
       "message": "chore(release): publish"
     }
   }
