--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@didi/vuese-parser",
+  "name": "@mpxjs/vuese-parser",
   "version": "1.1.7-test.1",
   "description": "Vue file parser for automatic document generation",
   "keywords": [
