--- a/packages/markdown-render/package.json
+++ b/packages/markdown-render/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mpxjs/vuese-markdown-render",
-  "version": "1.0.7",
+  "version": "1.0.8-alpha.0",
   "description": "Render raw markdown string according to AST",
   "keywords": [
     "markdown",
