--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -31,6 +31,7 @@
     "typescript": "^5.2.2"
   },
   "publishConfig": {
+    "registry": "https://registry.npmjs.org",
     "access": "public"
   },
   "repository": {
