--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -7,8 +7,8 @@
     "vue",
     "document"
   ],
-  "author": "HcySunYang <HcySunYang@outlook.com>",
-  "homepage": "https://github.com/vuese/vuese/tree/master/packages/parser#readme",
+  "author": "qiushuibai <1125097005@qq.com>",
+  "homepage": "https://github.com/mpx-ecology/vuese/tree/monorepo",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,15 +34,7 @@
     "registry": "https://registry.npmjs.org",
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vuese/vuese.git"
-  },
-  "bugs": {
-    "url": "https://github.com/vuese/vuese/issues"
-  },
   "buildOptions": {
     "extractDts": true
-  },
-  "gitHead": "0183bb361113741ada374c6a4ac1f91300c3c85b"
+  }
 }
