--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mpxjs/vuese-parser",
-  "version": "1.1.8-alpha.4",
+  "version": "1.0.0",
   "description": "Vue file parser for automatic document generation",
   "keywords": [
     "parser",
