--- a/packages/markdown-render/package.json
+++ b/packages/markdown-render/package.json
@@ -30,7 +30,7 @@
     "extractDts": true
   },
   "devDependencies": {
-    "@vuese/parser": "^2.9.1"
+    "@mpxjs/vuese-parser": "^1.0.2"
   },
   "gitHead": "1926e96fcba6d4dcd699a877f93fe0445538c28a"
 }
