--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 node_modules
 dist
 .history
@@ -9,3 +10,4 @@ yarn.lock
 packages/parser/lib/example.ts
 .vscode/launch.json
 packages/demo
+demo/docs/.vitepress/cache
