--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "highlight.js": "11.9.0",
     "typedoc": "^0.25.2",
     "typedoc-plugin-missing-exports": "^2.1.0",
     "vue-template-compiler": "^2.6.11"
