--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "vitepress": "^1.2.2",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "highlight.js": "^11.9.0"
   }
 }
