--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "markdown-toc": "^1.2.0",
     "prettier": "^1.14.3",
     "rollup": "2",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^23.10.1",
     "typescript": "^5.2.2"
