--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,6 +27,7 @@
     "vue": "^3.0.0",
     "highlight.js": "^11.9.0",
     "dirty-json": "^0.9.2",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "node-watch": "^0.6.4"
   }
 }
