--- a/demo/package.json
+++ b/demo/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs": "vitepress dev docs"
+    "docs": "vitepress dev docs",
+    "testa": "node index"
   },
   "dependencies": {
-    "@mpxjs/vuese-website": "npm:@didi/vuese-website@0.0.2-beta.8",
+    "@mpxjs/vuese-website": "file:../packages/website",
     "vitepress": "^1.2.3"
   },
   "author": "",
