--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "packages/declarations.d.ts",
     "packages/**/index.d.ts",
     "packages/*/lib",
-    "packages/*/__test__"
+    "packages/*/__test__",
+    "packages/**/*.mjs",
   ]
 }
