--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mpxjs/vuese-website",
-  "version": "0.0.2-beta.16",
+  "name": "@didi/vuese-website",
+  "version": "0.0.2-beta.22",
   "description": "构建示例网站",
   "author": "QiuShuiBai <1125097005@qq.com>",
   "homepage": "",
@@ -23,7 +23,7 @@
   "dependencies": {
     "@mpxjs/vuese-parser": "~1.0.2",
     "@mpxjs/vuese-markdown-render": "~1.0.0",
-    "vitepress": "^1.2.2",
+    "vitepress": "^1.3",
     "vue": "^3.0.0",
     "highlight.js": "^11.9.0",
     "dirty-json": "^0.9.2",
