--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@didi/vuese-website",
+  "name": "@mpxjs/vuese-website",
   "version": "0.0.2-beta.22",
   "description": "构建示例网站",
   "author": "QiuShuiBai <1125097005@qq.com>",
