--- a/demo/package.json
+++ b/demo/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node index",
     "docs": "vitepress dev docs",
-    "testa": "node index"
+    "gen-doc": "vuese-website"
   },
   "dependencies": {
     "@mpxjs/vuese-website": "file:../packages/website",
