--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -21,13 +21,15 @@
     "vuese-website": "bin/init.js"
   },
   "dependencies": {
-    "@mpxjs/vuese-parser": "~1.0.2",
     "@mpxjs/vuese-markdown-render": "~1.0.0",
-    "vitepress": "^1.3",
-    "vue": "^3.0.0",
-    "highlight.js": "^11.9.0",
+    "@mpxjs/vuese-parser": "~1.0.2",
     "dirty-json": "^0.9.2",
+    "fs-extra": "^11.2.0",
+    "highlight.js": "^11.9.0",
+    "inquirer": "^12.1.0",
     "lodash-es": "^4.17.21",
-    "node-watch": "^0.6.4"
+    "node-watch": "^0.6.4",
+    "vitepress": "^1.3",
+    "vue": "^3.0.0"
   }
 }
