--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ dist
 *.txt
 test-website
 .profile
-yarn.lock
 packages/parser/lib/example.ts
 .vscode/launch.json
 .DS_Store
 packages/demo
 demo/docs/.vitepress/cache
+.cache
