--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "null"
+    "url": "git@github.com:mpx-ecology/vuese.git"
   },
   "buildOptions": {
     "extractDts": true
