--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -25,8 +25,8 @@
     "vuese-website": "bin/init.js"
   },
   "dependencies": {
-    "@mpxjs/vuese-markdown-render": "~1.0.0",
-    "@mpxjs/vuese-parser": "~1.0.2",
+    "@mpxjs/vuese-markdown-render": "^1.0.0",
+    "@mpxjs/vuese-parser": "^1.0.4",
     "dirty-json": "^0.9.2",
     "fs-extra": "^11.2.0",
     "highlight.js": "^11.9.0",
