feat: 🎸 website 支持多路径

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/*"
   ],
   "scripts": {
+    "website": "cd website && npm run serve:doc",
     "serve": "node ./demo/index.js",
     "test": "yarn lint && jest --verbose",
     "build": "yarn lint && node ./scripts/build.js",
