--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,7 @@
   ],
   "command": {
     "publish": {
-      "allowBranch": ["master", "monorepo", "pub"],
+      "allowBranch": ["main", "monorepo", "pub"],
       "message": "chore(release): publish"
     }
   }
